--- a/public/views/index.html
+++ b/public/views/index.html
@@ -7,6 +7,7 @@
     <title>To Do's</title>
     <script src="vendors/angular.min.js" charset="utf-8"></script>
     <script src="vendors/angular-route.min.js" charset="utf-8"></script>
+    <script src="scripts/index.controller.js" charset="utf-8"></script>
     <script src="scripts/client.js" charset="utf-8"></script>
     <link rel="stylesheet" href="/styles/style.css">
 
