On click function works

--- a/server/public/views/home.html
+++ b/server/public/views/home.html
@@ -1,6 +1,6 @@
 <div>
     <input type="text" placeholder="Text" ng-model="ic.textInput">
-    <button type="submit" ng-click="ic.displayText()">Submit</button>
+    <button type="submit" ng-click="ic.displayText(ic.textInput)">Submit</button>
     
     <p>{{ic.textInput}}</p>
 
