--- a/server/public/views/home.html
+++ b/server/public/views/home.html
@@ -4,7 +4,15 @@
     <input type="date" name="dueDate" ng-model="ic.dueDate">
     <button type="submit" ng-click="ic.displayText(ic.textInput, ic.dueDate)">Submit</button>
     
-    <p>{{ic.textInput}}</p>
-    <p>{{ic.dueDate}}</p>
+    <table>
+        <tr>
+            <th>To Do</th>
+            <th>Due Date</th>
+        </tr>
+        <tr>
+            <td>{{ic.textInput}}</td>
+            <td>{{ic.dueDate}}</td>
+        </tr>
+    </table>
 
 </div>
