Changed date to medium date

--- a/server/public/views/home.html
+++ b/server/public/views/home.html
@@ -11,7 +11,7 @@
         </tr>
         <tr>
             <td>{{ic.textInput}}</td>
-            <td>{{ic.dueDate}}</td>
+            <td>{{ic.dueDate | date:'mediumDate'}}</td>
         </tr>
     </table>
 
